--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "functional": "cpp",
+        "stack": "cpp"
     }
 }
