added cavas test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,14 @@
         "functional": "cpp",
         "stack": "cpp",
         "map": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "chrono": "cpp",
+        "forward_list": "cpp",
+        "iomanip": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp"
     }
 }
